<resources>
    <string name="app_name">BusinessCardsApp</string>

    <string name="openNavigation">Відкрити</string>
    <string name="closeNavigation">Закрити</string>

    <!--menu-->
    <string name="find_toolbarButton">Пошук</string>

    <!--menu_navigation-->
    <string name="myCardMenu">Моя візитка</string>
    <string name="settingsMenu">Налашування</string>
    <string name="syncMenu">Синхронізація</string>
    <string name="logoutMenu">Вийти</string>

    <!--MyCardActivity-->
    <string name="firstName_myCard">Ім\'я</string>
    <string name="patronymic_myCard">По батькові</string>
    <string name="lastName_myCard">Прізвице</string>
    <string name="telephone_myCard">Телефон</string>
    <string name="fax_myCard">Факс</string>
    <string name="email_myCard">Email</string>
    <string name="company_myCard">Органцізація</string>
    <string name="profession_myCard">Посада/професія</string>
    <string name="address_myCard">Адреса</string>
    <string name="web_myCard">Веб-сайт</string>
    <string name="facebook_myCard">Facebook</string>
    <string name="twitter_myCard">Twitter</string>
    <string name="instagram_myCard">Instagram</string>
    <string name="save_myCardToolbarBtn">Зберегти</string>

    <!--dialog_card-->
    <string name="save_cardDialogBtn">Зберегти</string>

    <!--LoginActivity-->
    <string name="toolbarText_loginActivity">Вхід</string>
    <string name="username_loginActivity">Логін</string>
    <string name="password_loginActivity">Пароль</string>
    <string name="signIn_loginActivity">Увійти</string>
    <string name="signUp_loginActivity">Зареєструватися</string>

</resources>
