<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activity.LoginActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_login"
        app:title="@string/toolbarText_loginActivity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/username_loginActivity"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_style"
            android:hint="@string/username_loginActivity"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/password_loginActivity"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_style"
            android:hint="@string/password_loginActivity"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/signIn_button"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_style"
            android:text="@string/signIn_loginActivity"
            android:textColor="@color/colorWhite" />

        <ProgressBar
            android:id="@+id/progressBar_loginActivity"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:visibility="gone"/>
    </LinearLayout>
    
    <Button
        android:id="@+id/signUp_button"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_style"
        android:text="@string/signUp_loginActivity"
        android:textColor="@color/colorWhite" />



</RelativeLayout>